feat: design da pagina de saque

--- a/frontend/avaliacaods/src/app/components/login/login.component.html
+++ b/frontend/avaliacaods/src/app/components/login/login.component.html
@@ -17,13 +17,13 @@
         <div class="button-hint">
             <mat-hint>CPF</mat-hint>
         </div>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
             <input matInput placeholder="Digite seu CPF" [formControl]="cpf">
         </mat-form-field>
         <div class="button-hint">
             <mat-hint>Senha</mat-hint>
         </div>
-        <mat-form-field>
+        <mat-form-field appearance="outline">
             <input matInput placeholder="Digite sua Senha" [formControl]="password">
         </mat-form-field>
     </div>
