--- a/frontend/avaliacaods/src/app/components/login/login.component.html
+++ b/frontend/avaliacaods/src/app/components/login/login.component.html
@@ -29,7 +29,7 @@
     </div>
     
     <div class="buttons">
-        <button type="button" class="btn btn-primary button">Cadastrar</button>
-        <button type="button" class="btn btn-primary button">Login</button>
+        <button (click)="goToRegister()" type="button" class="btn btn-primary button">Cadastrar</button>
+        <button (click)="onLogin()" type="button" class="btn btn-primary button">Login</button>
     </div>
 </div>
