--- a/frontend/avaliacaods/src/app/components/menu/menu.component.html
+++ b/frontend/avaliacaods/src/app/components/menu/menu.component.html
@@ -1,31 +1,31 @@
 <app-nav-bar></app-nav-bar>
 <div class="content">
     <div class = "options">
-        <div class = "option">
+        <div class = "option" (click)="goToAccount()">
             <mat-icon>account_circle</mat-icon>
             <div class = "title">
                 <h2>Contas</h2>
             </div>
         </div>
-        <div class = "option">
+        <div class = "option" (click)="goToWithdrawal()">
             <mat-icon>point_of_sale</mat-icon>
             <div class = "title">
                 <h2>Saque</h2>
             </div>
         </div>
-        <div class = "option">
+        <div class = "option" (click)="goToDeposit()">
             <mat-icon>attach_money</mat-icon>
             <div class = "title">
                 <h2>Depósito</h2>
             </div>
         </div>
-        <div class = "option">
+        <div class = "option" (click)="goToBankStatement()">
             <mat-icon>receipt_long</mat-icon>
             <div class = "title">
                 <h2>Extrato</h2>
             </div>
         </div>
-        <div class = "option">
+        <div class = "option" (click)="logout()">
             <mat-icon>logout</mat-icon>
             <div class = "title">
                 <h2>Sair</h2>
