feat: adiciona integracao backend para cadastro/login e listagem de contas

--- a/frontend/avaliacaods/src/app/components/cliente/cliente.component.html
+++ b/frontend/avaliacaods/src/app/components/cliente/cliente.component.html
@@ -17,7 +17,7 @@
         <mat-hint>Nome</mat-hint>
     </div>
     <mat-form-field appearance="outline">
-        <input matInput placeholder="Digite seu Nome" [formControl]="name">
+        <input matInput placeholder="Digite seu Nome" [formControl]="nome">
     </mat-form-field>
     <div class="register-data">
         <div class = "cpf-input input">
@@ -33,7 +33,7 @@
                 <mat-hint>Senha</mat-hint>
             </div>
             <mat-form-field appearance="outline">
-                <input matInput placeholder="Digite sua Senha" [formControl]="password">
+                <input matInput placeholder="Digite sua Senha" [formControl]="senha">
             </mat-form-field>
         </div>
         <div class = "phone-input input">
@@ -41,7 +41,7 @@
                 <mat-hint>Telefone</mat-hint>
             </div>
             <mat-form-field appearance="outline">
-                <input matInput placeholder="Digite seu Telefone" [formControl]="phone">
+                <input matInput placeholder="Digite seu Telefone" [formControl]="telefone">
             </mat-form-field>
         </div>
     </div>
