--- a/frontend/avaliacaods/src/app/components/login/login.component.html
+++ b/frontend/avaliacaods/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
             <mat-hint>Senha</mat-hint>
         </div>
         <mat-form-field appearance="outline">
-            <input matInput placeholder="Digite sua Senha" [formControl]="password">
+            <input matInput placeholder="Digite sua Senha" [formControl]="senha">
         </mat-form-field>
     </div>
     
