--- a/frontend/avaliacaods/src/app/components/nav-bar/nav-bar.component.html
+++ b/frontend/avaliacaods/src/app/components/nav-bar/nav-bar.component.html
@@ -1,15 +1,17 @@
-<div class="nav">
-    <svg class="title-icon" width="80" height="80" xmlns="http://www.w3.org/2000/svg">
-        <rect width="80" height="80" rx="12" ry="12" fill="#000066" />
-        
-        <circle cx="40" cy="40" r="24" fill="none" stroke="white" stroke-width="6" />
-      </svg>
-      
-      
-    <div class="user-info">
-        <p>Cliente: Maria</p>
+@if(user){
+    <div class="nav">
+        <svg class="title-icon" width="80" height="80" xmlns="http://www.w3.org/2000/svg">
+            <rect width="80" height="80" rx="12" ry="12" fill="#000066" />
+            
+            <circle cx="40" cy="40" r="24" fill="none" stroke="white" stroke-width="6" />
+          </svg>
+          
+          
+        <div class="user-info">
+            <p>Cliente: {{user.nome}}</p>
+        </div>
     </div>
-</div>
-<div class="div-divider">
-    <hr class="divider">
-</div>
+    <div class="div-divider">
+        <hr class="divider">
+    </div>
+}
