--- a/frontend/avaliacaods/src/app/components/contas/contas.component.html
+++ b/frontend/avaliacaods/src/app/components/contas/contas.component.html
@@ -2,19 +2,19 @@
 <div class="content">
     <div class="table-title">
         <h2>Contas</h2>
-        <button (click)="goToRegister()" type="button" class="btn btn-primary button">Criar nova conta</button>
+        <button (click)="createAccount()" type="button" class="btn btn-primary button">Criar nova conta</button>
     </div>
     <div class="table">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <ng-container matColumnDef="numeroConta">
                 <th mat-header-cell *matHeaderCellDef> Número da Conta </th>
-                <td mat-cell *matCellDef="let element"> {{element.numeroConta}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.numero}} </td>
             </ng-container>
 
             <ng-container matColumnDef="saldo">
                 <th mat-header-cell *matHeaderCellDef> Saldo </th>
-                <td mat-cell *matCellDef="let element"> {{element.saldo}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.saldo}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
