--- a/frontend/avaliacaods/src/app/components/deposito/deposito.component.html
+++ b/frontend/avaliacaods/src/app/components/deposito/deposito.component.html
@@ -1,25 +1,27 @@
 <app-nav-bar></app-nav-bar>
-<div class="content">
-    <h2>Depósito</h2>
-
-    <div class="select">
-        <h2>Conta</h2>
-        <div class="inputs">
-            <mat-form-field class="field-account" appearance="outline">
-                <mat-label>Selecione uma conta</mat-label>
-                <mat-select>
-                    @for (food of foods; track food) {
-                    <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
-                    }
-                </mat-select>
-            </mat-form-field>
-            <div class="value-div">
-                <h2 class="value-title">Valor</h2>
-                <mat-form-field class="field-value" appearance="outline">
-                    <input matInput placeholder="Digite o valor do depósito" [formControl]="valor">
+@if(accounts$ | async; as accounts){
+    <div class="content">
+        <h2>Depósito</h2>
+    
+        <div class="select">
+            <h2>Conta</h2>
+            <div class="inputs">
+                <mat-form-field class="field-account" appearance="outline">
+                    <mat-label>Selecione uma conta</mat-label>
+                    <mat-select [(ngModel)]="selectedAccount" name="selectedAccount">
+                        @for (account of accounts; track account.numero) {
+                        <mat-option [value]="account.numero">{{account.numero}}</mat-option>
+                        }
+                    </mat-select>
                 </mat-form-field>
-                <button type="button" class="btn btn-primary button">Confirmar</button>
+                <div class="value-div">
+                    <h2 class="value-title">Valor</h2>
+                    <mat-form-field class="field-value" appearance="outline">
+                        <input matInput placeholder="Digite o valor do depósito" [formControl]="valor">
+                    </mat-form-field>
+                    <button (click)="onDeposit()" type="button" class="btn btn-primary button">Confirmar</button>
+                </div>
             </div>
         </div>
     </div>
-</div>
+}
