--- a/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
+++ b/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
@@ -1,36 +1,37 @@
-<app-nav-bar></app-nav-bar>
+@if(accounts$ | async; as accounts){
+    <app-nav-bar></app-nav-bar>
 <div class="content">
     <h1>Extrato</h1>
     <div class="select">
         <h2>Conta</h2>
         <mat-form-field class="field-account" appearance="outline">
             <mat-label>Selecione uma conta</mat-label>
-            <mat-select>
-                @for (food of foods; track food) {
-                <mat-option [value]="food.value">{{food.viewValue}}</mat-option>
+            <mat-select [(ngModel)]="selectedAccount" name="selectedAccount">
+                @for (account of accounts; track account.numero) {
+                <mat-option [value]="account.numero">{{account.numero}}</mat-option>
                 }
             </mat-select>
         </mat-form-field>
     </div>
     <div class = "button-check">
-        <button type="button" class="btn btn-primary button">Consultar</button>
+        <button (click)="onSearch()" type="button" class="btn btn-primary button">Consultar</button>
     </div>
     <div class="table">
         <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
             <ng-container matColumnDef="data">
                 <th mat-header-cell *matHeaderCellDef> Data </th>
-                <td mat-cell *matCellDef="let element"> {{element.data}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.data}} </td>
             </ng-container>
 
             <ng-container matColumnDef="valor">
                 <th mat-header-cell *matHeaderCellDef> Valor </th>
-                <td mat-cell *matCellDef="let element"> {{element.valor}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.valor}} </td>
             </ng-container>
 
             <ng-container matColumnDef="tipo">
                 <th mat-header-cell *matHeaderCellDef> Tipo </th>
-                <td mat-cell *matCellDef="let element"> {{element.tipo}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.tipo}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -38,3 +39,4 @@
         </table>
     </div>
 </div>
+}
