--- a/frontend/avaliacaods/src/styles.scss
+++ b/frontend/avaliacaods/src/styles.scss
@@ -8,3 +8,13 @@ app-root {
     margin: 0;
     padding: 0;
 }
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
