--- a/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
+++ b/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
@@ -26,7 +26,7 @@
 
             <ng-container matColumnDef="valor">
                 <th mat-header-cell *matHeaderCellDef> Valor </th>
-                <td mat-cell *matCellDef="let item"> {{item.valor}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.valor ? (item.valor | currency:'BRL':'symbol':'1.2-2') : 'R$ 0,00'}} </td>
             </ng-container>
 
             <ng-container matColumnDef="tipo">
