--- a/frontend/avaliacaods/src/app/components/contas/contas.component.html
+++ b/frontend/avaliacaods/src/app/components/contas/contas.component.html
@@ -14,7 +14,7 @@
 
             <ng-container matColumnDef="saldo">
                 <th mat-header-cell *matHeaderCellDef> Saldo </th>
-                <td mat-cell *matCellDef="let item"> {{item.saldo}} </td>
+                <td mat-cell *matCellDef="let item"> {{item.saldo ? (item.saldo | currency:'BRL':'symbol':'1.2-2') : 'R$ 0,00'}} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
