--- a/frontend/avaliacaods/src/app/components/saque/saque.component.html
+++ b/frontend/avaliacaods/src/app/components/saque/saque.component.html
@@ -1,36 +1,35 @@
 <app-nav-bar></app-nav-bar>
 
 @if(accounts$ | async; as accounts){
-  <div class="content">
-    <h2>Saque</h2>
+<div class="content">
+  <h2>Saque</h2>
 
-    <div class="select">
-      <h2>Conta</h2>
-      <div class="inputs">
-        <mat-form-field class="field-account" appearance="outline">
-          <mat-label>Selecione uma conta</mat-label>
-          <mat-select [(ngModel)]="selectedAccount" name="selectedAccount">
-            @for (account of accounts; track account.numero) {
-              <mat-option [value]="account.numero">{{account.numero}}</mat-option>
-            }
-          </mat-select>
+  <div class="select">
+    <h2>Conta</h2>
+    <div class="inputs">
+      <mat-form-field class="field-account" appearance="outline">
+        <mat-label>Selecione uma conta</mat-label>
+        <mat-select [(ngModel)]="selectedAccount" name="selectedAccount">
+          @for (account of accounts; track account.numero) {
+          <mat-option [value]="account.numero">{{account.numero}}</mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+
+      <div class="value-div">
+        <h2 class="value-title">Valor</h2>
+        <mat-form-field class="field-value" appearance="outline">
+          <input matInput placeholder="Digite o valor do saque" [value]="displayPrice" (input)="onPriceInput($event)"
+            (keydown)="allowOnlyNumbers($event)" [formControl]="valor" maxLength="10">
+          <mat-error *ngIf="valor.hasError('maxLength')">
+            O valor máximo para saque é R$ 9.999,99
+          </mat-error>
         </mat-form-field>
-
-        <div class="value-div">
-          <h2 class="value-title">Valor</h2>
-          <mat-form-field class="field-value" appearance="outline">
-            <input matInput 
-                   placeholder="Digite o valor do saque" 
-                   [value]="displayPrice"
-                   (input)="onPriceInput($event)" 
-                   (keydown)="allowOnlyNumbers($event)">
-          </mat-form-field>
-
-          <button (click)="onWithdrawal()" type="button" class="btn btn-primary button">
-            Confirmar
-          </button>
-        </div>
+        <button (click)="onWithdrawal()" type="button" class="btn btn-primary button">
+          Confirmar
+        </button>
       </div>
     </div>
   </div>
+</div>
 }
