--- a/frontend/avaliacaods/src/app/components/cliente/cliente.component.scss
+++ b/frontend/avaliacaods/src/app/components/cliente/cliente.component.scss
@@ -72,11 +72,42 @@ button {
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 600px) {
     .nav {
         flex-direction: column;
         padding: 1rem;
-        height: 11rem;
+        height: auto;
+    }
+
+    .title-info {
+        margin-top: 0.5rem;
+    }
+
+    .inputs {
+        width: 100%;
+        margin-left: 0;
+        margin-top: 2rem;
+        padding: 0 1rem;
+    }
+
+    .register-data {
+        flex-direction: column;
+        gap: 1.5rem;
+        margin-top: 1rem;
+    }
+
+    .input {
+        width: 100%;
+    }
+
+    .buttons {
+        flex-direction: column;
+        gap: 1rem;
+        margin-top: 2rem;
+    }
+
+    button {
+        width: 100%;
     }
 }
 
