--- a/frontend/avaliacaods/src/app/components/saque/saque.component.scss
+++ b/frontend/avaliacaods/src/app/components/saque/saque.component.scss
@@ -2,23 +2,22 @@
     height: 70%;
     max-width: 100%;
     margin-top: 2.5rem;
-    margin-left: 4rem
+    margin-left: 4rem;
 }
-
 
 .titles {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;;
+    justify-content: space-between;
 }
 
 .inputs {
     width: 95%;
     display: flex;
     flex-direction: row;
+    gap: 1rem;
 }
-
 
 .select {
     display: flex;
@@ -47,6 +46,7 @@ mat-form-field {
 .value-title {
     position: absolute;
     top: -3rem;
+    left: 0;
 }
 
 .button {
@@ -55,36 +55,53 @@ mat-form-field {
     margin-top: 1rem;
     width: 100%;
     background-color: #000066;
+    color: white;
+    border: none;
+    cursor: pointer;
 }
-
 
 @media (max-width: 768px) {
     .content {
-        margin-left: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-top: 1.5rem;
     }
 
     .select {
         margin-top: 2rem;
-        margin-left: 2rem;
+        margin-left: 0;
     }
 
     .inputs {
         flex-direction: column;
+        width: 100%;
+        gap: 1rem;
+    }
+
+    .field-account {
+        width: 100%;
+        height: 2.5rem;
+    }
+
+    .field-value {
+        width: 100%;
     }
 
     .value-div {
-        margin-top: 3rem;
+        margin-top: 1rem;
+        position: static;
     }
 
     .value-title {
         position: static;
+        margin-bottom: 0.3rem;
+        font-size: 1.2rem;
+        font-weight: 600;
     }
 
-    .field-value {
-        width: 60%;
-    }
-
-    .field-account {
-        width: 80%;
+    .button {
+        max-width: 100%;
+        height: 3.5rem;
+        font-size: 1rem;
     }
 }
