--- a/frontend/avaliacaods/src/app/components/cliente/cliente.component.scss
+++ b/frontend/avaliacaods/src/app/components/cliente/cliente.component.scss
@@ -34,8 +34,13 @@
 
 svg {
     margin: 0;
+    cursor: pointer;
 }
 
+svg:hover {
+    transform: scale(1.1);
+    transition: transform 0.3s ease;
+}
 
 .register-data {
     display: flex;
