--- a/frontend/avaliacaods/src/app/components/deposito/deposito.component.html
+++ b/frontend/avaliacaods/src/app/components/deposito/deposito.component.html
@@ -1,6 +1,9 @@
 <app-nav-bar></app-nav-bar>
 @if(accounts$ | async; as accounts){
 <div class="content">
+    <button class="btn-back" (click)="goBack()" aria-label="Voltar para menu">
+        <mat-icon>arrow_back</mat-icon>
+    </button>
     <h2>Depósito</h2>
 
     <div class="select">
