--- a/frontend/avaliacaods/src/app/components/contas/contas.component.scss
+++ b/frontend/avaliacaods/src/app/components/contas/contas.component.scss
@@ -12,6 +12,17 @@
     width: 95%;
 }
 
+.btn-back {
+    border: none !important;
+    background-color: white !important;
+    margin-bottom: 1rem;
+}
+
+.btn-back mat-icon {
+    color: #000066 !important;
+    transform: scale(1.5);
+}
+
 .table-title {
     display: flex;
     flex-direction: row;
