--- a/frontend/avaliacaods/src/app/components/saque/saque.component.scss
+++ b/frontend/avaliacaods/src/app/components/saque/saque.component.scss
@@ -12,6 +12,17 @@
     justify-content: space-between;
 }
 
+.btn-back {
+    border: none !important;
+    background-color: white !important;
+    margin-bottom: 1rem;
+}
+
+.btn-back mat-icon {
+    color: #000066 !important;
+    transform: scale(1.5);
+}
+
 .inputs {
     width: 95%;
     display: flex;
