feat: inclusao de limite de credito para conta

--- a/frontend/avaliacaods/src/app/components/contas/contas.component.html
+++ b/frontend/avaliacaods/src/app/components/contas/contas.component.html
@@ -21,8 +21,45 @@
                     0,00'}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="limiteCredito">
+                <th mat-header-cell *matHeaderCellDef> Limite de Cŕedito </th>
+                <td mat-cell *matCellDef="let item"> {{item.limiteCredito ? (item.limiteCredito |
+                    currency:'BRL':'symbol':'1.2-2') : 'R$
+                    0,00'}} </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
     </div>
+
+
+    @if(accounts$ | async; as accounts) {
+    <div class="select">
+        <h2>Conta</h2>
+        <div class="inputs">
+            <mat-form-field class="field-account" appearance="outline" (click)="onSelectClick()">
+                <mat-label>Selecione uma conta</mat-label>
+                <mat-select [(ngModel)]="selectedAccount" name="selectedAccount">
+                    @for (account of accounts; track account.numero) {
+                    <mat-option [value]="account.numero">{{account.numero}}</mat-option>
+                    }
+                </mat-select>
+            </mat-form-field>
+
+            <div class="value-div">
+                <h2 class="value-title">Novo Limite</h2>
+                <mat-form-field class="field-value" appearance="outline">
+                    <input matInput placeholder="Digite o valor do novo limite" [value]="displayPrice"
+                        (input)="onPriceInput($event)" (keydown)="allowOnlyNumbers($event)" [formControl]="valor"
+                        maxLength="10">
+                </mat-form-field>
+                <button (click)="onClick()" type="button" class="btn btn-primary button button-confirm">
+                    Confirmar
+                </button>
+            </div>
+        </div>
+    </div>
+
+    }
 </div>
