--- a/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
+++ b/frontend/avaliacaods/src/app/components/extrato/extrato.component.html
@@ -37,6 +37,11 @@
                 <td mat-cell *matCellDef="let item"> {{item.tipo}} </td>
             </ng-container>
 
+            <ng-container matColumnDef="tipoOperacao">
+                <th mat-header-cell *matHeaderCellDef> Operação </th>
+                <td mat-cell *matCellDef="let item"> {{item.tipoOperacao}} </td>
+            </ng-container>
+
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
