feat: finalizacao transferencia

--- a/frontend/avaliacaods/src/app/components/menu/menu.component.html
+++ b/frontend/avaliacaods/src/app/components/menu/menu.component.html
@@ -19,6 +19,12 @@
                 <h2>Depósito</h2>
             </div>
         </div>
+        <div class = "option" (click)="goToTransference()">
+            <mat-icon>money</mat-icon>
+            <div class = "title">
+                <h2>Transferência</h2>
+            </div>
+        </div>
         <div class = "option" (click)="goToBankStatement()">
             <mat-icon>receipt_long</mat-icon>
             <div class = "title">
